# rust-performace-metrics

./: Cargo.toml  README.md  build.rs  hello.py  test.js
proto/: PerformanceMetrics.proto
src/: client.rs  server.rs
