[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
procfs = "0.14"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
libc = "0.2"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.7"